feat: Configure Vercel for SPA routing
Updates vercel.json to correctly serve the SPA index.html for all routes when deployed, ensuring client-side routing works as expected. Also adds a comment to index.html indicating where the Vite bundle will be injected.

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,11 @@
 
 {
-  "routes": [
-    { "handle": "filesystem" },
-    { "src": "/(.*)", "dest": "/index.html" }
+  "cleanUrls": true,
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
+    }
   ],
   "headers": [
     {
